# AICorpusEngineering

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server_manager.py
agent-templates/: adverbs.jinja
agents/: adverbs_broad_grouper_agents.py
knowledge_base/: adverbs.json
llm_server/: server_manager.py
main/: adverbs.py
pipelines/: broad_grouper_pipeline.py
pos_tagging/: tag_texts.py
shell_tests/: hpt_essay_grading_zero_shot.sh  hpt_essay_grading_zero_shot_cot.sh
src/AICorpusEngineering/agent-templates/: ablation_adverbs.jinja  ablation_adverbs_descriptive_kb.jinja  ablation_adverbs_examples_kb.jinja  adverbs.jinja  adverbs_archive.jinja  adverbs_archive_2.jinja  mw_adverb_analyst.jinja
src/AICorpusEngineering/agents/: ablation_adverbs.py  adverbs_EoT_agent.py  adverbs_broad_grouper_agent.py  adverbs_broad_grouper_agents.py  adverbs_multiword_tagger.py  multiword_adverbs_tagger.py
src/AICorpusEngineering/error_handler/: error_handler.py
src/AICorpusEngineering/knowledge_base/: adverbs.json  adverbs_archive.json  knowledge_base.py
src/AICorpusEngineering/llm_server/: server_manager.py
src/AICorpusEngineering/logger/: logger.py  logger_registry.py
src/AICorpusEngineering/main/: ablation.py  ablation_adverbs.py  ablation_results_analysis.py  ablation_results_check.py  adverbs.py  gold.py  manual_tagger_gold.py  manual_tagger_gold_adverbs.py  mw_adverbs.py
src/AICorpusEngineering/mw_adverbs/: extract.py  main.py  multiword_adverbs_generalized.ndjson  my_adverbs.md  observe.py
src/AICorpusEngineering/text_proc/: tag_map.py  (+2 more)
(+9 files in other folders)
