[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicorpusengineering"
version = "0.1.0"
description = "Corpus engineering tools for LLMs"
authors = [
    { name = "Daniel Parsons" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "spacy>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools.package-data]
AICorpusEngineering = [
    "agent-templates/*.jinja",
    "knowledge_base/*.json",
]

[project.scripts]
tag-texts = "AICorpusEngineering.pos_tagging.tag_texts:main"
run-adverbs = "AICorpusEngineering.main.adverbs:main"
run-adverbs-ablation = "AICorpusEngineering.main.ablation_adverbs:main"
process-corpus = "AICorpusEngineering.main.gold:main"
run-multiword-adverbs = "AICorpusEngineering.main.mw_adverbs:main"
manual-tagger = "AICorpusEngineering.main.manual_tagger_gold:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]